# RustMegaStore

./: Cargo.toml  README.md  docker-compose.yml
src/: db.rs  gui.rs  lib.rs  main.rs  recommendation.rs  recommendations.rs
tests/: basic.rs  insert_tests.rs  recommendation_tests.rs  search_tests.rs
